без меню и нормального слайдера

--- a/index.html
+++ b/index.html
@@ -3,21 +3,87 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>FlowerBook app | Flowers</title>
-	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-	<!-- Optional theme -->
+  <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/phone.css">
   <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+  <script src="owl-carousel/owl.carousel.js"></script>
+
   <script type="text/javascript" src="js/my.js"></script>
   <script type="text/javascript" src="js/jquery.color.js"></script>
 </head>
 <body>
 
+  <section class="section-1">
+    <div class="container">
+      <div id="slider" class="owl-carousel owl-theme">
+        <div class="center" id="slide-0">
+          <img src="images/phone_header.png" alt="phone_header" class="phone-slide">
+          <br>
+          <h3 class="white-text">Introducing a Revolutionary New App</h3>
+          <p class="white-text">Designed For You By The Flower Experts</p>
+          <a href="http://appstore.com"><img src="images/app-store-small.png" alt="istore" class="img-store-1"></a>
+          <a href="http://google.com" ><img src="images/googleplay.png" alt="google play" class="img-store-1"></a>
+        </div>
+        <div class="center" id="slide-1">
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/D1gxBGi7Nkk" frameborder="0" allowfullscreen class="video"></iframe>
+        </div>
+      </div>
+      <br>
+      <ul class="center">
+        <li class="nav" id="nav-0"></li>
+        <li class="nav" id="nav-1"></li>
+      </ul>
+      <br>
+    </div>
+
+  </section>
+
+  <section class="section-2 container center">
+    <h5 class="blue-text">WHETHER YOU ARE A GROWER, WHOLESALER, FLORIST OR SIMPLY A FLOWER ENTHUSIAST</h5>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+          <h2>FLOWERBOOK IS YOUR PERSONAL FLOWER GUIDE</h2>
+          <br>
+          <p>
+            Flowerbook is a useful discovery tool you can use to find flowers for all your projects and designs. Whether you are creating a colour themed event or just need to know what is available seasonally, this simple to use App is designed to make it easier. Each flower listed is matched to a colour guide and all the information you need is clearly listed including clear pictures, whether there is limited availability, if it is grown all year round and where it’s grown.
+            <br>With over 5,000 high quality images you can search by variety, type or colour of flower.
+          </p>
+          <br>
+        </div>
+      </div>
+    <div class="div-phones-3 phone-up">
+      <img src="images/three_phones2.png" alt="phones" class="phones-3">
+    </div>
+  </section>
+
+  <section class="green">
+    <div class="container section-3 green">
+      <div class="row center">
+        <div class="col-sm-6 col-xs-10 col-xs-push-1 text-box white-text">
+          <h2>NOW AVAILABLE</h2>
+          <br>
+          <p>You can now have the answers to all those flower questions instantly.
+          <br>
+          Flowerbook is your expert guide, versatile and easy to use. Download it now and join the Flowerbook revolution.
+          </p>
+          <br>
+          <h2>DOWLOAD FOR</h2>
+          <a href="http://appstore.com"><img src="images/app-store-small.png" alt="istore" class="img-store" ></a>
+          <a href="http://google.com" ><img src="images/googleplay.png" alt="google play" class="img-store"></a>
+        </div>
+        <div class="col-sm-5 col-sm-push-1 col-xs-12 phone-up center ">
+          <img src="images/phone_right.png" alt="phone" class="phone-right">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="container section-4">
     <div class="row">
       <div class="text-box col-sm-5 col-sm-push-7 col-xs-12">
+        <br>
         <h2>FLOWERBOOK IS FOR YOU!</h2>
         <br>
         <p>Flowerbook gives you the confidence to quote, with accuracy, what is available and what is not.
@@ -26,7 +92,7 @@
         </p>
       </div>
       <div class="col-sm-6 col-sm-pull-5 col-xs-12 center phone-up">
-        <img src="images/phone.png" width="250px">
+        <img src="images/phone.png" width="250px" class="phone-left">
       </div>
     </div>
   </section>
@@ -40,7 +106,7 @@
     <ul>
       <li><a href="https://www.facebook.com/flowerbookapp"><img src="images/facebookicon.png" alt="facebook"></a></li>
       <li><a href="https://www.apple.com"><img src="images/appstore.png" alt="apple"></a></li>
-      <li><a href="https://dribbble.com"><img src="images/googleplay.png" alt="playmarket"></a></li>
+      <li><a href="https://dribbble.com"><img src="images/googleplay.png" width ="110px" alt="playmarket"></a></li>
     </ul>
     <p id="copy">&copy 2014 FlowerBook. All rights reserved.</p>
   </footer>
